<resources>
    <string name="app_name">PixelKnot</string>

    <string name="title_new">New</string>
    <string name="title_albums">Albums</string>

    <string name="action_done">Done</string>
    <string name="action_albums">Show albums</string>
    <string name="action_pick_external">Pick from external app</string>
    <string name="action_pick_external_album_name">Other</string>

    <string name="gallery_info_message">Tap a photo to start creating a hidden message</string>
    <string name="gallery_info_ok">Got it</string>
    <string name="gallery_need_permission">We need your permission to access your photos. Please tap anywhere to allow it.</string>

    <string name="secret_message_hint">Write your message...</string>
    <string name="secret_password_hint">Set a message password</string>
    <string name="secret_password_minlength_info">Make it at least %d characters.</string>
    <string name="secret_password_too_short">Too short</string>
    <string name="password_skip">Skip</string>
    <string name="password_set">Set</string>

    <string name="confirm_passphrase_override_title">Skip password?</string>
    <string name="confirm_passphrase_override">Without protecting your image with a password, your secret message may be discovered if intercepted.</string>
    <string name="confirm_passphrase_override_back">Go back</string>
    <string name="confirm_passphrase_override_continue">Continue</string>

    <string name="message_encrypting_title">Almost done!</string>
    <string name="message_encrypting">We\'re hiding your message. This will take us a few minutes. We\'ll notify you when it\'s ready to send.</string>

    <string name="image_sent_title">Tell them it\'s coming!</string>
    <string name="image_sent">Your recipient must open the image with Pixelknot to read your message.</string>

    <string name="tap_to_send">Tap to send</string>
    <string name="tap_to_retry">Error, tap to retry</string>
    <string name="sending">Sending...</string>
    <string name="dont_show_again">Don\'t show again.</string>

    <string name="unsafe_share_title">Unsafe share</string>
    <string name="unsafe_share">Not good for compressed images, etc etc.</string>

    <string name="outbox_item_deleted">Image deleted</string>
    <string name="outbox_item_deleted_undo">Undo</string>
    <string name="outbox_item_created_recently">Created less than a minute ago</string>
    <string name="outbox_item_created_minutes">Created %1$d minutes ago</string>
    <string name="outbox_item_created_minute">Created %1$d minute ago</string>
    <string name="outbox_item_created_hours">Created %1$d hours ago</string>
    <string name="outbox_item_created_hour">Created %1$d hour ago</string>
    <string name="outbox_item_created_days">Created %1$d days ago</string>
    <string name="outbox_item_created_day">Created %1$d day ago</string>


    <string name="notification_message_ready">Message Ready</string>
    <string name="notification_messages_ready">%d Messages Ready</string>

    <!-- Receiver -->
    <string name="enter_message_password">Enter message password</string>
    <string name="unlock">Unlock</string>
    <string name="extracting_message">Fetching your message</string>
    <string name="error_try_again">Try again</string>

    <string name="chooser_title_share">Share with</string>
    <string name="chooser_share_safe">Apps that will work</string>
    <string name="chooser_share_unsafe">Apps that may work</string>

    <!-- APG related -->
    <string name="apg_error_activity_not_found">No suitable application for this action found.</string>
    <string name="apg_error_apg_version_not_supported">The installed APG version is not supported.</string>
    <string name="unknown_crypto_signature_user_id">&lt;unknown&gt;</string>
    <string name="insufficient_apg_permissions">This app doesn\'t have permission to access APG fully, please reinstall the app to fix that.</string>

</resources>
